src/main/java/com/utb/flowumi/editorflowumi/compiler/FlowUmiCompilerParser.java
// $ANTLR 3.1.2 C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g 2013-08-13 14:34:48

package com.flowumi.compiler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class FlowUmiCompilerParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INICIO", "FIN", "VARIABLES", "FIN_VAR", "ID", "INT", "ENTERO", "BOOLEANO", "REAL", "CADENA", "CARACTER", "NINGUNO", "ASIGNACION", "MOD", "STRING", "FLOAT", "LOGICO", "CHAR", "SI", "FIN_SI", "SINO", "MIENTRAS", "FIN_MIENTRAS", "PARA", "FIN_PARA", "LECTURA", "ESCRITURA", "FUNCION", "BREAK", "AUX", "IVAR", "EXPONENT", "COMMENT", "WS", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "ESC_SEQ", "'='", "'['", "']'", "'&&'", "'||'", "'<'", "'>'", "'>='", "'<='", "'=='", "'!='", "'*'", "'/'", "'+'", "'-'", "'.NO.'", "'('", "')'", "','", "'):'", "':'", "';'"
    };
    public static final int EXPONENT=35;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int LOGICO=20;
    public static final int INICIO=4;
    public static final int MOD=17;
    public static final int FIN_VAR=7;
    public static final int OCTAL_ESC=40;
    public static final int ASIGNACION=16;
    public static final int CHAR=21;
    public static final int FLOAT=19;
    public static final int T__61=61;
    public static final int ID=8;
    public static final int EOF=-1;
    public static final int T__60=60;
    public static final int BREAK=32;
    public static final int FIN=5;
    public static final int SINO=24;
    public static final int PARA=27;
    public static final int LECTURA=29;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int ENTERO=10;
    public static final int ESC_SEQ=41;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int MIENTRAS=25;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__59=59;
    public static final int COMMENT=36;
    public static final int FUNCION=31;
    public static final int FIN_PARA=28;
    public static final int T__50=50;
    public static final int AUX=33;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int CADENA=13;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int CARACTER=14;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int IVAR=34;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int UNICODE_ESC=39;
    public static final int FIN_MIENTRAS=26;
    public static final int FIN_SI=23;
    public static final int HEX_DIGIT=38;
    public static final int INT=9;
    public static final int ESCRITURA=30;
    public static final int REAL=12;
    public static final int WS=37;
    public static final int SI=22;
    public static final int VARIABLES=6;
    public static final int BOOLEANO=11;
    public static final int NINGUNO=15;
    public static final int STRING=18;

    // delegates
    // delegators


        public FlowUmiCompilerParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FlowUmiCompilerParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return FlowUmiCompilerParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g"; }


    ArrayList<String> errores=new ArrayList<String>();
    private String error= new String("");

    public String getErrorMessage(RecognitionException e,String[] tokenNames)
    {
    String msg = null;
    if ( e instanceof NoViableAltException ) {
    NoViableAltException nvae = (NoViableAltException)e;
    msg = "no hay alternativa viable";
    }
    else {
    if ( e instanceof MismatchedTokenException ) {
    MismatchedTokenException nvae = (MismatchedTokenException) e;
    msg = "falta o sobra una palabra";
    }
    else {
    if ( e instanceof MismatchedTreeNodeException ) {
    MismatchedTreeNodeException nvae = (MismatchedTreeNodeException) e;
    msg = "falta una nodo";
    }
    else {
    msg = super.getErrorMessage(e, tokenNames);
    }
    }
    }
    return msg;
    }
    public String getTokenErrorDisplay(Token t) {
    		return t.toString();
    	}

    public void reportError( RecognitionException e ){
        		reportError(getErrorMessage(e, tokenNames), e.line);
        	}

    public void reportError(String msg, int line)
        	{
        		error = error+ msg+": linea del error: "+line+"\n";
        	}
    public String imprimir()
    	{
    		return (error);
    			
    	}
    public boolean error(){
    if(error.length()>1)
    return true;
    else
    return false;
    }


    public static class algoritmo_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "algoritmo"
    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:62:1: algoritmo : ( funcion )+ ;
    public final FlowUmiCompilerParser.algoritmo_return algoritmo() throws RecognitionException {
        FlowUmiCompilerParser.algoritmo_return retval = new FlowUmiCompilerParser.algoritmo_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        FlowUmiCompilerParser.funcion_return funcion1 = null;



        try {
            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:63:2: ( ( funcion )+ )
            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:63:4: ( funcion )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:63:4: ( funcion )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNCION) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:63:5: funcion
            	    {
            	    pushFollow(FOLLOW_funcion_in_algoritmo55);
            	    funcion1=funcion();

            	    state._fsp--;

            	    adaptor.addChild(root_0, funcion1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "algoritmo"

    public static class principal_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "principal"
    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:65:1: principal : variablesDec INICIO ( sentencias )* FIN -> ^( INICIO variablesDec ( sentencias )* ) ;
    public final FlowUmiCompilerParser.principal_return principal() throws RecognitionException {
        FlowUmiCompilerParser.principal_return retval = new FlowUmiCompilerParser.principal_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token INICIO3=null;
        Token FIN5=null;
        FlowUmiCompilerParser.variablesDec_return variablesDec2 = null;

        FlowUmiCompilerParser.sentencias_return sentencias4 = null;


        CommonTree INICIO3_tree=null;
        CommonTree FIN5_tree=null;
        RewriteRuleTokenStream stream_INICIO=new RewriteRuleTokenStream(adaptor,"token INICIO");
        RewriteRuleTokenStream stream_FIN=new RewriteRuleTokenStream(adaptor,"token FIN");
        RewriteRuleSubtreeStream stream_sentencias=new RewriteRuleSubtreeStream(adaptor,"rule sentencias");
        RewriteRuleSubtreeStream stream_variablesDec=new RewriteRuleSubtreeStream(adaptor,"rule variablesDec");
        try {
            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:66:2: ( variablesDec INICIO ( sentencias )* FIN -> ^( INICIO variablesDec ( sentencias )* ) )
            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:66:4: variablesDec INICIO ( sentencias )* FIN
            {
            pushFollow(FOLLOW_variablesDec_in_principal67);
            variablesDec2=variablesDec();

            state._fsp--;

            stream_variablesDec.add(variablesDec2.getTree());
            INICIO3=(Token)match(input,INICIO,FOLLOW_INICIO_in_principal69);  
            stream_INICIO.add(INICIO3);

            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:66:24: ( sentencias )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==INT||LA2_0==ASIGNACION||LA2_0==SI||LA2_0==MIENTRAS||LA2_0==PARA||(LA2_0>=LECTURA && LA2_0<=ESCRITURA)||LA2_0==BREAK) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:66:24: sentencias
            	    {
            	    pushFollow(FOLLOW_sentencias_in_principal71);
            	    sentencias4=sentencias();

            	    state._fsp--;

            	    stream_sentencias.add(sentencias4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            FIN5=(Token)match(input,FIN,FOLLOW_FIN_in_principal74);  
            stream_FIN.add(FIN5);



            // AST REWRITE
            // elements: INICIO, sentencias, variablesDec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 66:40: -> ^( INICIO variablesDec ( sentencias )* )
            {
                // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:66:42: ^( INICIO variablesDec ( sentencias )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_INICIO.nextNode(), root_1);

                adaptor.addChild(root_1, stream_variablesDec.nextTree());
                // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:66:64: ( sentencias )*
                while ( stream_sentencias.hasNext() ) {
                    adaptor.addChild(root_1, stream_sentencias.nextTree());

                }
                stream_sentencias.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "principal"

    public static class variablesDec_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "variablesDec"
    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:68:1: variablesDec : VARIABLES ( declaracionVar )* FIN_VAR -> ^( VARIABLES ( declaracionVar )* ) ;
    public final FlowUmiCompilerParser.variablesDec_return variablesDec() throws RecognitionException {
        FlowUmiCompilerParser.variablesDec_return retval = new FlowUmiCompilerParser.variablesDec_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token VARIABLES6=null;
        Token FIN_VAR8=null;
        FlowUmiCompilerParser.declaracionVar_return declaracionVar7 = null;


        CommonTree VARIABLES6_tree=null;
        CommonTree FIN_VAR8_tree=null;
        RewriteRuleTokenStream stream_FIN_VAR=new RewriteRuleTokenStream(adaptor,"token FIN_VAR");
        RewriteRuleTokenStream stream_VARIABLES=new RewriteRuleTokenStream(adaptor,"token VARIABLES");
        RewriteRuleSubtreeStream stream_declaracionVar=new RewriteRuleSubtreeStream(adaptor,"rule declaracionVar");
        try {
            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:69:2: ( VARIABLES ( declaracionVar )* FIN_VAR -> ^( VARIABLES ( declaracionVar )* ) )
            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:69:4: VARIABLES ( declaracionVar )* FIN_VAR
            {
            VARIABLES6=(Token)match(input,VARIABLES,FOLLOW_VARIABLES_in_variablesDec94);  
            stream_VARIABLES.add(VARIABLES6);

            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:69:14: ( declaracionVar )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=ENTERO && LA3_0<=NINGUNO)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:69:14: declaracionVar
            	    {
            	    pushFollow(FOLLOW_declaracionVar_in_variablesDec96);
            	    declaracionVar7=declaracionVar();

            	    state._fsp--;

            	    stream_declaracionVar.add(declaracionVar7.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            FIN_VAR8=(Token)match(input,FIN_VAR,FOLLOW_FIN_VAR_in_variablesDec99);  
            stream_FIN_VAR.add(FIN_VAR8);



            // AST REWRITE
            // elements: declaracionVar, VARIABLES
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 69:38: -> ^( VARIABLES ( declaracionVar )* )
            {
                // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:69:40: ^( VARIABLES ( declaracionVar )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_VARIABLES.nextNode(), root_1);

                // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:69:52: ( declaracionVar )*
                while ( stream_declaracionVar.hasNext() ) {
                    adaptor.addChild(root_1, stream_declaracionVar.nextTree());

                }
                stream_declaracionVar.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "variablesDec"

    public static class declaracionVar_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaracionVar"
    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:71:1: declaracionVar : ( tipo_dato ID '=' constante -> ^( IVAR tipo_dato ID '=' constante ) | tipo_dato ID '[' INT ']' -> ^( IVAR tipo_dato ID INT ) | tipo_dato ID '[' INT ']' '[' INT ']' -> ^( IVAR tipo_dato ID INT INT ) );
    public final FlowUmiCompilerParser.declaracionVar_return declaracionVar() throws RecognitionException {
        FlowUmiCompilerParser.declaracionVar_return retval = new FlowUmiCompilerParser.declaracionVar_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID10=null;
        Token char_literal11=null;
        Token ID14=null;
        Token char_literal15=null;
        Token INT16=null;
        Token char_literal17=null;
        Token ID19=null;
        Token char_literal20=null;
        Token INT21=null;
        Token char_literal22=null;
        Token char_literal23=null;
        Token INT24=null;
        Token char_literal25=null;
        FlowUmiCompilerParser.tipo_dato_return tipo_dato9 = null;

        FlowUmiCompilerParser.constante_return constante12 = null;

        FlowUmiCompilerParser.tipo_dato_return tipo_dato13 = null;

        FlowUmiCompilerParser.tipo_dato_return tipo_dato18 = null;


        CommonTree ID10_tree=null;
        CommonTree char_literal11_tree=null;
        CommonTree ID14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree INT16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree ID19_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree INT21_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree char_literal23_tree=null;
        CommonTree INT24_tree=null;
        CommonTree char_literal25_tree=null;
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_constante=new RewriteRuleSubtreeStream(adaptor,"rule constante");
        RewriteRuleSubtreeStream stream_tipo_dato=new RewriteRuleSubtreeStream(adaptor,"rule tipo_dato");
        try {
            // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:72:2: ( tipo_dato ID '=' constante -> ^( IVAR tipo_dato ID '=' constante ) | tipo_dato ID '[' INT ']' -> ^( IVAR tipo_dato ID INT ) | tipo_dato ID '[' INT ']' '[' INT ']' -> ^( IVAR tipo_dato ID INT INT ) )
            int alt4=3;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:72:4: tipo_dato ID '=' constante
                    {
                    pushFollow(FOLLOW_tipo_dato_in_declaracionVar116);
                    tipo_dato9=tipo_dato();

                    state._fsp--;

                    stream_tipo_dato.add(tipo_dato9.getTree());
                    ID10=(Token)match(input,ID,FOLLOW_ID_in_declaracionVar118);  
                    stream_ID.add(ID10);

                    char_literal11=(Token)match(input,42,FOLLOW_42_in_declaracionVar120);  
                    stream_42.add(char_literal11);

                    pushFollow(FOLLOW_constante_in_declaracionVar122);
                    constante12=constante();

                    state._fsp--;

                    stream_constante.add(constante12.getTree());


                    // AST REWRITE
                    // elements: 42, ID, constante, tipo_dato
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 72:30: -> ^( IVAR tipo_dato ID '=' constante )
                    {
                        // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:72:32: ^( IVAR tipo_dato ID '=' constante )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(IVAR, "IVAR"), root_1);

                        adaptor.addChild(root_1, stream_tipo_dato.nextTree());
                        adaptor.addChild(root_1, stream_ID.nextNode());
                        adaptor.addChild(root_1, stream_42.nextNode());
                        adaptor.addChild(root_1, stream_constante.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // C:\\Users\\ideacentre\\Dropbox\\Tesis\\proyecto1\\flow-umi-system\\FlowUmiSystem-ejb\\src\\main\\java\\com\\flowumi\\compiler\\FlowUmiCompiler.g:73:4: tipo_dato ID '[' INT ']'
                    {
                    pushFollow(FOLLOW_tipo_dato_in_declaracionVar139);
                    tipo_dato13=tipo_dato();

                    state._fsp--;

                    stream_tipo_dato.add(tipo_dato13.getTree());
                    ID14=(Token)match(input,ID,FOLLOW_ID_in_declaracionVar141);  
                    stream_ID.add(ID14);

                    char_literal15=(Token)match(input,43,FOLLOW_43_in_declaracionVar143);  
                    stream_43.add(char_literal15);

                    INT16=(Token)match(input,INT,FOLLOW_INT_in_declaracionVar144);  
                    stream_INT.add(INT16);

